[gd_scene load_steps=5 format=3 uid="uid://bjif36ktvwfx1"]

[ext_resource type="PackedScene" uid="uid://ds3uorcdtoqco" path="res://assets/m1911_blue.glb" id="1_v3nm5"]
[ext_resource type="Script" path="res://scripts/pickup_blue_gun.gd" id="2_t22dr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hb64u"]
size = Vector3(1, 3.29834, 4.98584)

[sub_resource type="BoxShape3D" id="BoxShape3D_cje2b"]
size = Vector3(1.4591, 3.44289, 5.22815)

[node name="PickupBlueGun" instance=ExtResource("1_v3nm5")]
script = ExtResource("2_t22dr")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0378418, -0.0378418)
shape = SubResource("BoxShape3D_hb64u")

[node name="PickupRange" type="Area3D" parent="Cube" index="1"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/PickupRange" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0187424, -0.0250627, -0.0372924)
shape = SubResource("BoxShape3D_cje2b")

[connection signal="body_entered" from="Cube/PickupRange" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Cube/PickupRange" to="." method="_on_area_3d_body_exited"]
